@@ -173,9 +173,6 @@ Recent Bugs
 * bump shader seems to be busted.  only renders as flat by itself and
   stacked with phong it seems to ignore the uv settings.
 
-* rtweight is reportedly crashing on Windows.  seems to be during
-  view_init (.density file parsing).
-
 * rtweight prints incorrect units when units are set to ft.  Appears
   to trace back to unit handling in view_end in viewweight.c.  This
   logic should be replaced using the proper libbu functions.
